# rust-projects

./: .gitignore
cli/: Cargo.toml  test.http
cli/src/: lib.rs  main.rs  opts.rs  process.rs
cli/src/cmd_opts/: base64.rs  csv.rs  gen_password.rs  httpfs.rs  mod.rs  opts.rs
cli/src/process/: b64.rs  csv_convert.rs  gen_password.rs  httpfs.rs  mod.rs  utils.rs
