[package]
name = "cli"
version = "0.1.0"
authors = ["XiaoLiang <jxl762610973@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
toml = "0.8.20"
