[package]
name = "cli"
version = "0.1.0"
authors = ["XiaoLiang <jxl762610973@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.5"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "net", "fs", "tokio-macros"] }
toml = "0.8.20"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
log = "0.4.25"
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["fs"] }
